# LAD2025

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  README.md
02_Multifile/src/: const.c  fun.c  output.h  prog.c
03_text/: ascii.txt  randomize.sh
04_Debugging/: Makefile  README.md  expected1.txt  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  README.md  esub.c
05_Regexps/tests/: cases.tsv  err.txt  error_cases.tsv  run_tests.sh  sed_once.sh  verify_requirements.sh
06_Tracing/: Makefile  README.md  move.c  protect.c  run_tests.sh
07_Environmental/: Makefile.am  README.md  autogen.sh  configure.ac
07_Environmental/src/: Makefile.am  rhasher.c
07_Environmental/tests/: Makefile.am  run-tests.sh
08_I18n/: .gitignore  README.md  bootstrap  configure.ac
08_I18n/po/: Makevars  POTFILES.in  ru.po  zh_CN.po
08_I18n/src/: Makefile.am  guessnum.c
09_PatchDiff/: Makefile  README.txt  maze.c  patch1.diff  patch2.diff  patch3.diff
10_LibTesting/: Makefile.am  README.md  autogen.sh  configure.ac  coverage.sh
10_LibTesting/src/: Makefile.am  buf.c  buf.h
10_LibTesting/tests/: Makefile.am  test_buf.c
11_Documenting/: Doxyfile  Makefile  README.md  doc_mainpage.dox  number-game.c  roman.c  roman.h
12_InstallPackaging/: CMakeLists.txt  README.md
12_InstallPackaging/cmake/: uninstall.cmake
12_InstallPackaging/docs/: project.md
12_InstallPackaging/include/: greeter.h
12_InstallPackaging/man/: greet_tool.1
12_InstallPackaging/po/: en.po  ru.po
12_InstallPackaging/scripts/: extract_docs.py
12_InstallPackaging/src/: greeter.c  main.c
12_InstallPackaging/tests/: test_greeter.c
Docs_tmp/: randomize.sh
